fix: touch device menu wrappers re-aligned

--- a/css/style.css
+++ b/css/style.css
@@ -461,12 +461,10 @@
     position: absolute;
     opacity: 0;
     background-color: #96ff8c;
-    height: 25%;
-    margin-top: 35px;
-    padding-bottom: 8px;
+    height: 37%;
+    bottom: 2px;
+    left: 0;
     z-index: -1;
-    justify-self: center;
-    transform: translateX(-88%);
     width: 132%;
 }
 
